<resources>
    <string name="app_name">Tohfa</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_admin_maps">Map</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="facebook_app_id">244770883298813</string>
    <string name="fb_login_protocol_scheme">fb244770883298813</string>


    <string name="style">Style</string>
    <string name="categories">categories</string>
    <string name="product">product</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="report">Report</string>
    <string name="detailes">Detailes :</string>
    <string name="test">test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
    test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
    </string>
    <string name="see_more">See more ..</string>
    <string name="location">Location :</string>
    <string name="contity">Contity</string>
    <string name="buy_now">BUY NOW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_seller">Best Seller</string>
    <string name="setting">Setting</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_on_the_map_to_expand">Click here to enlarge</string>
    <string name="search">Search</string>
    <string name="confirm_pay">Confirm the payment</string>
    <string name="will_pay">Now you will pay | </string>
    <string name="about"> , About </string>
    <string name="ech_one"> , each one at a price | </string>
    <string name="compelte">complete</string>
    <string name="cancle">cancle</string>
    <string name="_1">1</string>
    <string name="items">" item | </string>
    <string name="paying_loading">Paying Loading ...</string>
    <string name="paying_success">Paying Success</string>
    <string name="finish">Finish</string>
    <string name="fail">Fail</string>
    <string name="delete_from_basket">The product has been removed from your basket</string>
    <string name="add_to_basket">The product has been added to your basket</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notAdding_in_basket">You don\'t added any product in thr basket</string>
    <string name="loading">Loading ...</string>
    <string name="buying_success">Buying is successful</string>
    <string name="buying_fail">Buying is fail</string>
    <string name="favorite">Favorite</string>
    <string name="sure_delete">Are sure delete the product ?</string>
    <string name="added_favorite">The product was added to favorites</string>
    <string name="remove_from_favorite">The product has been removed from favorites</string>
    <string name="you_don_t_added_any_product_in_the_favorite">You don\'t added any product in the favorite</string>
    <string name="AdminKey">eRSttuzNI1ay4hoS2X6awNdFe8z2</string>
    <string name="AdminPass">ADMINADMIN</string>
    <string name="AdminEmail">admin@tohfa.com</string>
    <string name="accountFoundException" translatable="false">An account already exists with the same email address</string>
    <string name="this_varieties_is_empty">This varieties is empty</string>
    <string name="basket_is_empty">The basket is empty</string>
    <string name="tap_rating">Tap rating :</string>
    <string name="you_rating">Your rating</string>
</resources>
