<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_elements.user.activity.DetailesActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/detailes_img_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            android:background="@drawable/shape_detailes_icon_favorite_background"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorite"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/secondary_text"
            android:layout_below="@+id/detailes_img_favorite"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <ImageView
            android:id="@+id/detailes_img_reprot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_report"
            android:background="@drawable/shape_detailes_icon_reprot_background"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/secondary_text"
            android:layout_below="@+id/detailes_img_reprot"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            />


    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_line"
        android:layout_margin="@dimen/_10sdp"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@color/red"
        android:background="@drawable/shape_detailes_img_background"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SSD"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/titlesfont"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="-10dp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$59,55"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/titlesfont"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="-10dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailes"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/titlesfont"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="-15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        android:text="@string/test"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/titlesfont"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/titlesfont"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <ImageView
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:src="@drawable/b_seemore"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/titlesfont"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="-15dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:src="@color/red"
        android:background="@drawable/shape_detailes_img_background"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contity"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/titlesfont"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/detailes_txt_contity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/titlesfont"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_alignParentEnd="true"/>
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/a_add"
            android:layout_toEndOf="@+id/detailes_txt_contity"
            android:layout_marginStart="-55dp"
            android:layout_marginTop="@dimen/_5sdp" />
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/b_minus"
            android:layout_toStartOf="@+id/detailes_txt_contity"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="@dimen/_5sdp" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shape_detailes_btn_add_background">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_shopping2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add to basket" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shape_detailes_btn_add2_background">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/b_puy" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_now"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
</ScrollView>