<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupcontiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defultbckground"
    android:theme="@style/MaterialStyle"
    tools:context=".ui_elements.SignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_applogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titlesfont"
        android:shadowColor="#9A817D7B"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titlesfont"
        android:text="Market"
        android:textColor="@color/primary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:hint="Username"
        android:outlineAmbientShadowColor="@color/secondary_text"
        android:pointerIcon="wait"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/primary"
        app:endIconDrawable="@drawable/ic_account_circle_black_24dp"
        app:endIconMode="custom"
        app:endIconTint="@color/primary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:maxLength="16"
            android:fontFamily="@font/titlesfont"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:outlineAmbientShadowColor="@color/secondary_text"
        android:pointerIcon="wait"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/primary"
        app:endIconDrawable="@drawable/ic_email_black_24dp"
        app:endIconMode="custom"
        app:endIconTint="@color/primary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:maxLength="30"
            android:fontFamily="@font/titlesfont"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:outlineAmbientShadowColor="@color/secondary_text"
        android:pointerIcon="wait"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/primary"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/titlesfont"
            android:hint="@string/Password"
            android:maxLength="20"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:outlineAmbientShadowColor="@color/secondary_text"
        android:pointerIcon="wait"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/primary"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signinPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/titlesfont"
            android:hint="Repeat Password"
            android:maxLength="20"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/titlesfont"
        android:gravity="center"
        android:text="Signup"
        android:textColor="#fff"
        android:textSize="23sp"
        app:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <LinearLayout
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titlesfont"
            android:padding="2dp"
            android:text="Have an Accout ? LOGIN"
            android:textColor="@color/primary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>